# discordbot

./: CMakeLists.txt
src/: main.cpp
src/command/: dominion.cpp  earthlings.cpp  eisen.cpp  protein.cpp
src/commands/links/: bingo.cpp  bingo.hpp  dominion.cpp  dominion.hpp  earthlings.cpp  earthlings.hpp  eisen.cpp  eisen.hpp  protein.cpp  protein.hpp
src/commands/verify/: setup_verify.cpp
src/utils/: postLink.cpp  postLink.hpp
